--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,6 +28,15 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      ## gradle build
+      - name: Build with Gradle
+        run: ./gradlew bootJar
+
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
